--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,9 +62,9 @@
             </div>
 
             <div class="col-md-4">
-                <a th:href="@{/developers/list}">
+                <a th:href="@{/departments/list}">
                     <img th:src="@{/images/developers.png}"/>
-                    <h4 class="text-center">Developers</h4>
+                    <h4 class="text-center">Departments</h4>
                 </a>
             </div>
 
