--- a/src/main/resources/templates/changenotices/changenotice-info.html
+++ b/src/main/resources/templates/changenotices/changenotice-info.html
@@ -57,10 +57,10 @@
 
             <div class="row">
                 <div class="col-sm-2 border">
-                    <h6>Developer name:</h6>
+                    <h6>Department:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <h6 th:text="*{developer == null} ? '' : *{name} "></h6>
+                    <h6 th:text="*{department == null} ? '' : *{name} "></h6>
                 </div>
             </div>
 
