--- a/src/main/resources/templates/documents/document-form.html
+++ b/src/main/resources/templates/documents/document-form.html
@@ -9,6 +9,7 @@
 
     <link th:href="@{/css/custom.css}" rel="stylesheet" media="screen"/>
 
+    <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
     <title>Save Document</title>
 </head>
@@ -36,8 +37,6 @@
             </div>
 
             <input type="hidden" th:field="*{id}">
-<!--            <input type="hidden" th:field="*{changeNotices}">-->
-<!--            <input type="hidden" th:field="*{applicabilities}">-->
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
@@ -201,19 +200,19 @@
 
             <div class="row mb-3">
                 <div class="col-sm-2 form-control-plaintext offset-sm-1">
-                    <h6>Developer:</h6>
+                    <h6>Department:</h6>
                 </div>
                 <div class="col-sm-5">
-                    <select class="form-control selectpicker" th:field="*{developer}">
+                    <select class="form-control selectpicker" th:field="*{department}">
                         <option value="">Nothing selected</option>
-                        <option th:each="dropValue : ${developers}"
+                        <option th:each="dropValue : ${departments}"
                                 th:value="${dropValue.name}"
                                 th:text="${dropValue.name}">
                         </option>
                     </select>
-                    <span class="help-block" th:if="${#fields.hasErrors('developer')}">
+                    <span class="help-block" th:if="${#fields.hasErrors('department')}">
                         <ul>
-                            <li class="text-danger" th:each="err : ${#fields.errors('developer')}" th:text="${err}"/>
+                            <li class="text-danger" th:each="err : ${#fields.errors('department')}" th:text="${err}"/>
                         </ul>
                     </span>
                 </div>
