--- a/src/main/resources/templates/documents/document-info.html
+++ b/src/main/resources/templates/documents/document-info.html
@@ -85,10 +85,10 @@
 
             <div class="row">
                 <div class="col-sm-2 border">
-                    <h6>Developer:</h6>
+                    <h6>Department:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <h6 th:text="${document.developer == null} ? '' : ${document.developer.name}"></h6>
+                    <h6 th:text="${document.department == null} ? '' : ${document.department.name}"></h6>
                 </div>
             </div>
 
