--- a/src/main/resources/templates/documents/document-list.html
+++ b/src/main/resources/templates/documents/document-list.html
@@ -71,12 +71,12 @@
                 </div>
                 <div class="row mb-2">
                     <div class="col-sm-2">
-                        <select class="form-control selectpicker" name="developer">
+                        <select class="form-control selectpicker" name="department">
                             <option value="">Developer (not selected)</option>
-                            <option th:each="drop : ${developers}"
+                            <option th:each="drop : ${departments}"
                                     th:value="${drop.name}"
                                     th:text="${drop.name}"
-                                    th:selected="${drop.name == developer}">
+                                    th:selected="${drop.name == department}">
                             </option>
                         </select>
                     </div>
@@ -117,7 +117,7 @@
                 <tr>
                     <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="decimalNumber">Decimal number</a></th>
                     <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="name">Name</a></th>
-                    <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="developer">Developer</a></th>
+                    <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="department">Developer</a></th>
                     <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="status">Status</a></th>
                     <th class="align-middle"><a class="sorted text-light" sd:pagination-sort="originalHolder">Original Holder</a></th>
                     <th class="align-middle">Show Document</th>
@@ -131,7 +131,7 @@
                     </td>
                     <td class="align-middle" th:text="${tempDocument.name}"></td>
                     <td class="align-middle text-center">
-                        <a th:if="${tempDocument.developer != null}" th:href="@{'/developers/showDeveloperInfo/' + ${tempDocument.developer.id}}" th:text="${tempDocument.developer.name}"></a>
+                        <a th:if="${tempDocument.department != null}" th:href="@{'/departments/showDepartmentInfo/' + ${tempDocument.department.id}}" th:text="${tempDocument.department.name}"></a>
                     </td>
                     <td class="align-middle text-center" th:text="${tempDocument.status.name}"></td>
                     <td class="align-middle text-center">
