--- a/src/main/resources/templates/companies/company-info.html
+++ b/src/main/resources/templates/companies/company-info.html
@@ -15,55 +15,57 @@
 </head>
 <body>
 <div class="container">
-    <a th:href="@{/companies/list}">Back to Companies list</a>
+
+    <a th:href="@{/companies/list}">To List of Companies</a>
+
     <br><br>
 
     <h3>Company Directory</h3>
+
     <hr>
 
-    <p class="h4 mb-4">Company information</p>
+    <p class="h4 mb-4" th:text="${company.name} + ' information'"></p>
 
-    <span th:object="${company}">
+    <div th:object="${company}">
 
-            <div class="row">
-                <div class="col-sm-2">
-
-                </div>
-                <div class="col-sm-3 text-right">
-                    <a th:href="@{/companies/showFormForUpdate(companyId=${company.id})}" class="btn btn-sm btn-outline-info mb-1">Update</a>
-                    <a th:href="@{/companies/delete(companyId=${company.id})}" class="btn btn-sm btn-outline-danger mb-1"
-                       onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
-                </div>
+        <div class="row px-3">
+            <div class="col-sm-2 border">
+                <h6>Name:</h6>
             </div>
-
-            <div class="row">
-                <div class="col-sm-2 border">
-                    <h6>Name:</h6>
-                </div>
-                <div class="col-sm-3 border">
-                    <h6 th:text="*{name}"></h6>
-                </div>
+            <div class="col-sm-4 border">
+                <h6 th:text="*{name}"></h6>
             </div>
+        </div>
 
-            <div class="row">
-                <div class="col-sm-2 border">
-                    <h6>Address:</h6>
-                </div>
-                <div class="col-sm-3 border">
-                    <h6 th:text="*{address.zipcode + ', ' + address.city + ', ' + address.street + ', ' + address.building}"></h6>
-                </div>
+        <div class="row px-3">
+            <div class="col-sm-2 border">
+                <h6>Address:</h6>
             </div>
-
-            <div class="row">
-                <div class="col-sm-2 border">
-                    <h6>Contact person:</h6>
-                </div>
-                <div class="col-sm-3 border">
-                    <h6 th:text="*{contactPerson}"></h6>
-                </div>
+            <div class="col-sm-4 border">
+                <h6 th:text="*{address.zipcode + ', ' + address.city + ', ' + address.street + ', ' + address.building}"></h6>
             </div>
+        </div>
 
-        </span>
+        <div class="row px-3 mb-1">
+            <div class="col-sm-2 border">
+                <h6>Contact person:</h6>
+            </div>
+            <div class="col-sm-4 border">
+                <h6 th:text="*{contactPerson}"></h6>
+            </div>
+        </div>
+
+        <div class="row px-5">
+            <div class="col-sm-3">
+
+            </div>
+            <div class="col-sm-3 text-right">
+                <a th:href="@{'/companies/showFormForUpdate/' + ${company.id}}" class="btn btn-sm btn-outline-info mb-1">Update</a>
+                <a th:href="@{'/companies/delete/' + ${company.id}}" class="btn btn-sm btn-outline-danger mb-1"
+                   onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
