--- a/src/main/resources/templates/departments/department-info.html
+++ b/src/main/resources/templates/departments/department-info.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
 
-        <a th:href="@{/departments/list}">Back to List of Departments</a>
+        <a th:href="@{/departments/list}">To List of Departments</a>
 
         <br><br>
 
