--- a/src/main/resources/templates/internaldispatches/internaldispatch-album-info.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-album-info.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container">
 
-    <a th:href="@{/internaldispatches/list/albums}">Back to Albums list</a>
+    <a th:href="@{/internaldispatches/list/albums}">To List of Album</a>
 
     <br><br>
 
@@ -26,69 +26,68 @@
 
     <div th:object="${internalDispatch}">
 
-        <div class="row">
-            <div class="col-sm-2 border">
+        <div class="row px-3">
+            <div class="col-sm-3 border">
                 <h6>Album name:</h6>
             </div>
-            <div class="col-sm-3 border">
+            <div class="col-sm-2 border">
                 <h6 th:text="*{albumName}"></h6>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-2 border">
+        <div class="row px-3">
+            <div class="col-sm-3 border">
                 <h6>Stamp:</h6>
             </div>
-            <div class="col-sm-3 border">
+            <div class="col-sm-2 border">
                 <h6 th:text="*{stamp}"></h6>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-2 border">
+        <div class="row px-3">
+            <div class="col-sm-3 border">
                 <h6>Dispatch date:</h6>
             </div>
-            <div class="col-sm-3 border">
+            <div class="col-sm-2 border">
                 <h6 th:text="*{dispatchDate}"></h6>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-2 border">
+        <div class="row px-3">
+            <div class="col-sm-3 border">
                 <h6>Current handler:</h6>
             </div>
-            <div class="col-sm-3 border">
-                <h6 th:text="*{dispatchHandler.name}"></h6>
+            <div class="col-sm-2 border">
+                <a class="h6" th:if="*{dispatchHandler != null}" th:href="@{'/departments/showDepartmentInfo/' + ${internalDispatch.dispatchHandler.id}}" th:target="_blank" th:text="*{dispatchHandler.name}"></a>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-2 border">
+        <div class="row px-3">
+            <div class="col-sm-3 border">
                 <h6>Internal handler name:</h6>
             </div>
-            <div class="col-sm-3 border">
+            <div class="col-sm-2 border">
                 <h6 th:text="*{internalHandlerName}"></h6>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-2 border">
+        <div class="row px-3">
+            <div class="col-sm-3 border">
                 <h6>Internal handler phone number:</h6>
             </div>
-            <div class="col-sm-3 border">
+            <div class="col-sm-2 border">
                 <h6 th:text="*{internalHandlerPhoneNumber}"></h6>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-2 border">
+        <div class="row px-3">
+            <div class="col-sm-3 border">
                 <h6>Received date:</h6>
             </div>
-            <div class="col-sm-3 border">
+            <div class="col-sm-2 border">
                 <h6 th:text="*{receivedInternalDate}"></h6>
             </div>
         </div>
-
     </div>
 
     <br><br>
@@ -119,7 +118,6 @@
             </tbody>
         </table>
     </div>
-
 </div>
 </body>
 </html>
