--- a/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-albums.html
@@ -20,7 +20,7 @@
 
     <br><br>
 
-    <h3>Album List</h3>
+    <h3>List of Albums</h3>
 
     <hr>
 
@@ -35,6 +35,8 @@
             </div>
         </form>
     </div>
+
+    <br><br>
 
     <table class="table table-bordered table-hover">
         <thead class="thead-dark text-center">
