--- a/src/main/resources/templates/changenotices/changenotice-document-list.html
+++ b/src/main/resources/templates/changenotices/changenotice-document-list.html
@@ -59,23 +59,27 @@
     <div th:if="${changeNotice.documents != null && changeNotice.documents.size() != 0}">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
-            <th class="align-middle">Decimal number</th>
-            <th class="align-middle">Name</th>
-            <th class="align-middle">Change number</th>
-            <th class="align-middle">Department</th>
-            <th class="align-middle">Action</th>
+                <th class="align-middle">Decimal number</th>
+                <th class="align-middle">Name</th>
+                <th class="align-middle">Change number</th>
+                <th class="align-middle">Developer</th>
+                <th class="align-middle">Action</th>
             </thead>
             <tbody>
-            <tr th:each="entry : ${changeNotice.documents.entrySet()}">
-                <td class="align-middle" th:text="${entry.key.decimalNumber}"></td>
-                <td class="align-middle" th:text="${entry.key.name}"></td>
-                <td class="align-middle text-center" th:text="${entry.value}"></td>
-                <td class="align-middle text-center" th:text="${entry.key.department == null} ? '' : ${entry.key.department.name}"></td>
-                <td class="align-middle text-center">
-                    <a class="btn btn-sm btn-outline-danger"
-                       th:href="@{'/changenotices/removeDoc/' + ${changeNotice.id} + '/' + ${entry.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
-                </td>
-            </tr>
+                <tr th:each="entry : ${changeNotice.documents.entrySet()}">
+                    <td class="align-middle">
+                        <a th:href="@{'/documents/showDocumentInfo/' + ${entry.key.id}}" th:target="_blank" th:text="${entry.key.decimalNumber}"></a>
+                    </td>
+                    <td class="align-middle" th:text="${entry.key.name}"></td>
+                    <td class="align-middle text-center" th:text="${entry.value}"></td>
+                    <td class="align-middle">
+                        <a th:if="${entry.key.department != null}" th:href="@{'/departments/showDepartmentInfo/' + ${entry.key.department.id}}" th:target="_blank" th:text="${entry.key.department.name}"></a>
+                    </td>
+                    <td class="align-middle text-center">
+                        <a class="btn btn-sm btn-outline-danger"
+                           th:href="@{'/changenotices/removeDoc/' + ${changeNotice.id} + '/' + ${entry.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
