--- a/src/main/resources/templates/companies/company-form.html
+++ b/src/main/resources/templates/companies/company-form.html
@@ -26,21 +26,25 @@
         <br><br>
 
         <h3>Company Directory</h3>
+
         <hr>
 
-        <p class="h4 mb-4">Save Company</p>
+        <p class="h4 mb-3 offset-sm-3">Company Card</p>
 
-        <form class="form-horizontal" th:action="@{/companies/save}" th:object="${company}" method="post">
-            <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+        <form class="form-horizontal" th:object="${company}" th:action="@{/companies/save}" method="post">
+
+            <div th:if="${#fields.hasErrors('*')}" class="text-danger h5 offset-sm-2">
                 <p th:text="'Please correct values in error below'">Error Message</p>
             </div>
 
             <input type="hidden" th:field="*{id}">
 
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Name:</label>
-                <div class="col-sm-10">
-                    <input type="text" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{name}"/>
+            <div class="row mb-3">
+                <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                    <h6>Name:</h6>
+                </div>
+                <div class="col-sm-5">
+                    <input type="text" th:field="*{name}" th:class="${#fields.hasErrors('name')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Name'"/>
                     <span class="help-block" th:if="${#fields.hasErrors('name')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('name')}" th:text="${err}"/>
@@ -49,10 +53,12 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Zipcode:</label>
-                <div class="col-sm-10">
-                    <input type="text" th:class="${#fields.hasErrors('address.zipcode')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{address.zipcode}"/>
+            <div class="row mb-3">
+                <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                    <h6>Zipcode:</h6>
+                </div>
+                <div class="col-sm-5">
+                    <input type="text" th:field="*{address.zipcode}" th:class="${#fields.hasErrors('address.zipcode')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Zipcode'"/>
                     <span class="help-block" th:if="${#fields.hasErrors('address.zipcode')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('address.zipcode')}" th:text="${err}"/>
@@ -61,10 +67,12 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label class="col-sm-2 control-label">City:</label>
-                <div class="col-sm-10">
-                    <input type="text" th:class="${#fields.hasErrors('address.city')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{address.city}"/>
+            <div class="row mb-3">
+                <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                    <h6>City:</h6>
+                </div>
+                <div class="col-sm-5">
+                    <input type="text" th:field="*{address.city}" th:class="${#fields.hasErrors('address.city')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'City'"/>
                     <span class="help-block" th:if="${#fields.hasErrors('address.city')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('address.city')}" th:text="${err}"/>
@@ -73,10 +81,12 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Street:</label>
-                <div class="col-sm-10">
-                    <input type="text" th:class="${#fields.hasErrors('address.street')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{address.street}"/>
+            <div class="row mb-3">
+                <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                    <h6>Street:</h6>
+                </div>
+                <div class="col-sm-5">
+                    <input type="text" th:field="*{address.street}" th:class="${#fields.hasErrors('address.street')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Street'"/>
                     <span class="help-block" th:if="${#fields.hasErrors('address.street')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('address.street')}" th:text="${err}"/>
@@ -85,10 +95,12 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Building:</label>
-                <div class="col-sm-10">
-                    <input type="text" th:class="${#fields.hasErrors('address.building')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{address.building}"/>
+            <div class="row mb-3">
+                <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                    <h6>Building:</h6>
+                </div>
+                <div class="col-sm-5">
+                    <input type="text" th:field="*{address.building}" th:class="${#fields.hasErrors('address.building')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Building'"/>
                     <span class="help-block" th:if="${#fields.hasErrors('address.building')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('address.building')}" th:text="${err}"/>
@@ -97,10 +109,12 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Contact person:</label>
-                <div class="col-sm-10">
-                    <input type="text" th:class="${#fields.hasErrors('contactPerson')} ? 'form-control is-invalid' : 'form-control'"  th:field="*{contactPerson}"/>
+            <div class="row mb-3">
+                <div class="col-sm-2 form-control-plaintext offset-sm-1">
+                    <h6>Contact person:</h6>
+                </div>
+                <div class="col-sm-5">
+                    <input type="text" th:field="*{contactPerson}" th:class="${#fields.hasErrors('contactPerson')} ? 'form-control is-invalid' : 'form-control'" th:placeholder="'Contact person'"/>
                     <span class="help-block" th:if="${#fields.hasErrors('contactPerson')}">
                         <ul>
                             <li class="text-danger" th:each="err : ${#fields.errors('contactPerson')}" th:text="${err}"/>
@@ -109,10 +123,10 @@
                 </div>
             </div>
 
-            <br><br>
             <div class="row">
-                <button type="submit" class="btn btn-info col-2 offset-1">Save</button>
+                <button type="submit" class="btn-sm btn-primary offset-7" th:text="*{id} == null ? 'Save' : 'Update'">Save</button>
             </div>
+
             <br><br>
         </form>
     </div>
