--- a/src/main/resources/templates/documents/document-info.html
+++ b/src/main/resources/templates/documents/document-info.html
@@ -17,7 +17,7 @@
 
     <div class="container">
 
-        <a th:href="@{/documents/list}">Back to Documents list</a>
+        <a th:href="@{/documents/list}">To List of Documents</a>
 
         <br><br>
 
@@ -29,7 +29,7 @@
 
         <div th:object="${document}">
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6 >Decimal number:</h6>
                 </div>
@@ -38,7 +38,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Name:</h6>
                 </div>
@@ -47,7 +47,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Inventory number:</h6>
                 </div>
@@ -56,7 +56,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Receipt date:</h6>
                 </div>
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Status:</h6>
                 </div>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Stage:</h6>
                 </div>
@@ -83,25 +83,25 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
-                    <h6>Department:</h6>
+                    <h6>Developer:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <h6 th:text="${document.department == null} ? '' : ${document.department.name}"></h6>
+                    <a class="h6" th:if="${document.department != null}" th:href="@{'/departments/showDepartmentInfo/' + ${document.department.id}}" th:target="_blank" th:text="${document.department.name}"></a>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Original holder:</h6>
                 </div>
                 <div class="col-sm-3 border">
-                    <h6 th:text="*{originalHolder.name}"></h6>
+                    <a class="h6" th:if="${document.originalHolder != null}" th:href="@{'/companies/showCompanyInfo/' + ${document.originalHolder.id}}" th:target="_blank" th:text="${document.originalHolder.name}"></a>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Form:</h6>
                 </div>
@@ -110,7 +110,7 @@
                 </div>
             </div>
 
-            <div class="row" th:if="${document.form.name() == 'PAPER'}">
+            <div class="row px-3" th:if="${document.form.name() == 'PAPER'}">
                 <div class="col-sm-2 border">
                     <h6>Format:</h6>
                 </div>
@@ -119,7 +119,7 @@
                 </div>
             </div>
 
-            <div class="row" th:if="${document.form.name() == 'PAPER'}">
+            <div class="row px-3" th:if="${document.form.name() == 'PAPER'}">
                 <div class="col-sm-2 border">
                     <h6>Sheets amount:</h6>
                 </div>
@@ -129,7 +129,7 @@
             </div>
 
 
-            <div class="row" th:if="${document.form.name() == 'PAPER'}">
+            <div class="row px-3" th:if="${document.form.name() == 'PAPER'}">
                 <div class="col-sm-2 border">
                     <h6>A4 amount:</h6>
                 </div>
@@ -138,7 +138,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Changes:</h6>
                 </div>
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>Applicabilities:</h6>
                 </div>
@@ -160,7 +160,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row px-3">
                 <div class="col-sm-2 border">
                     <h6>External dispatches:</h6>
                 </div>
@@ -171,7 +171,7 @@
                 </div>
             </div>
 
-            <div class="row mb-1">
+            <div class="row px-3 mb-1">
                 <div class="col-sm-2 border">
                     <h6>Internal dispatches:</h6>
                 </div>
