--- a/src/main/resources/templates/internaldispatches/internaldispatch-info.html
+++ b/src/main/resources/templates/internaldispatches/internaldispatch-info.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container">
 
-    <a th:href="@{/internaldispatches/list}">Back to Internal dispatches list</a>
+    <a th:href="@{/internaldispatches/list}">To List of Internal dispatches</a>
 
     <br><br>
 
@@ -83,12 +83,12 @@
             </div>
         </div>
 
-        <div class="row px-3">
+        <div class="row px-3 mb-1">
             <div class="col-sm-2 border">
                 <h6>Dispatch handler:</h6>
             </div>
             <div class="col-sm-3 border">
-                <h6 th:text="*{dispatchHandler.name}"></h6>
+                <a class="h6" th:if="*{dispatchHandler != null}" th:href="@{'/departments/showDepartmentInfo/' + ${internalDispatch.dispatchHandler.id}}" th:target="_blank" th:text="*{dispatchHandler.name}"></a>
             </div>
         </div>
 
@@ -102,7 +102,6 @@
                    onclick="if (!(confirm('Are you sure?'))) return false">Delete</a>
             </div>
         </div>
-
     </div>
 
     <br><br>
@@ -128,21 +127,23 @@
     <div th:if="${internalDispatch.documents != null && internalDispatch.documents.size() != 0}">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
-            <th class="align-middle">Decimal number</th>
-            <th class="align-middle">Name</th>
-            <th class="align-middle">Active</th>
-            <th class="align-middle">Action</th>
+                <th class="align-middle">Decimal number</th>
+                <th class="align-middle">Name</th>
+                <th class="align-middle">Active</th>
+                <th class="align-middle">Action</th>
             </thead>
             <tbody>
-            <tr th:each="tempDocument : ${internalDispatch.documents}" th:class="${tempDocument.value} ? 'table-default' : 'table-danger'">
-                <td class="align-middle" th:text="${tempDocument.key.decimalNumber}"></td>
-                <td class="align-middle" th:text="${tempDocument.key.name}"></td>
-                <td class="align-middle text-center" th:text="${tempDocument.value}"></td>
-                <td class="align-middle text-center">
-                    <a class="btn btn-sm btn-outline-danger"
-                       th:href="@{'/internaldispatches/removeDoc/' + ${internalDispatch.id} + '/' + ${tempDocument.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
-                </td>
-            </tr>
+                <tr th:each="entry : ${internalDispatch.documents}" th:class="${entry.value} ? 'table-default' : 'table-danger'">
+                    <td class="align-middle">
+                        <a th:href="@{'/documents/showDocumentInfo/' + ${entry.key.id}}" th:target="_blank" th:text="${entry.key.decimalNumber}"></a>
+                    </td>
+                    <td class="align-middle" th:text="${entry.key.name}"></td>
+                    <td class="align-middle text-center" th:text="${entry.value}"></td>
+                    <td class="align-middle text-center">
+                        <a class="btn btn-sm btn-outline-danger"
+                           th:href="@{'/internaldispatches/removeDoc/' + ${internalDispatch.id} + '/' + ${entry.key.id}}" onclick="if (!(confirm('Are you sure?'))) return false">Remove</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
